--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -13,3 +13,8 @@
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore Terraform state files and providers
+terraform.tfstate
+terraform.lock.hcl
+terraform/providers/
