File .gitignore modified

--- a/terraform/.gitignore
+++ b/terraform/.gitignore
@@ -17,4 +17,10 @@ terraform.rc
 # Ignore Terraform state files and providers
 terraform.tfstate
 terraform.lock.hcl
-terraform/providers/
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
