--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -15,7 +15,9 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_MARIUS }}
           aws-region: eu-central-1
       - name: Deploy Infrastructure
-        run: |
+      - run: |
+          cd /terraform/terraform-modules/tf-ec2-module/
+      - run: |
           terraform init
       - run: |
           terraform apply -auto-approve
