--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -14,6 +14,8 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_MARIUS }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_MARIUS }}
           aws-region: eu-central-1
+      - name: Checkout Repository
+        uses: actions/checkout@v4
       - name: Deploy Infrastructure
       - run: |
             cd /terraform/terraform-modules/tf-ec2-module/
