Modified code for AWS variables

--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -15,7 +15,6 @@ jobs:
           USER_MAPPING=$(cat user-mapping.json)
           echo "::set-output name=user-mapping::$USER_MAPPING"
 
-
       # Step 0.1: Set AWS credentials
       - name: Set AWS Credentials
         run: |
@@ -23,8 +22,8 @@ jobs:
           USER_MAPPING="${{ steps.user-mapping.outputs.user-mapping }}"
           AWS_SECRET_ACCESS_KEY=$(echo $USER_MAPPING | jq -r --arg USERNAME "$USERNAME" '.[$USERNAME].AWS_SECRET_ACCESS_KEY')
           AWS_SECRET_KEY_ID=$(echo $USER_MAPPING | jq -r --arg USERNAME "$USERNAME" '.[$USERNAME].AWS_SECRET_KEY_ID')
-          echo "AWS_SECRET_ACCESS_KEY=${{ secrets[$AWS_SECRET_ACCESS_KEY] }}" >> $GITHUB_ENV
-          echo "AWS_SECRET_KEY_ID=${{ secrets[$AWS_SECRET_KEY_ID] }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
+          echo "AWS_SECRET_KEY_ID=${AWS_SECRET_KEY_ID}" >> $GITHUB_ENV
 
       # Step 1: Configure AWS credentials
       - name: Configure AWS credentials
