--- a/.github/workflows/user-mapping.json
+++ b/.github/workflows/user-mapping.json
@@ -1,10 +1,11 @@
 {
   "MariusB-DevOps": {
     "AWS_SECRET_ACCESS_KEY": "AWS_SECRET_ACCESS_KEY_MARIUS",
-    "AWS_SECRET_KEY_ID": "AWS_ACCESS_KEY_ID_MARIUS"
+    "AWS_SECRET_KEY_ID": "AWS_SECRET_KEY_ID_MARIUS"
   },
-  "user2": {
+  "another-user": {
     "AWS_SECRET_ACCESS_KEY": "AWS_SECRET_ACCESS_KEY_USER2",
     "AWS_SECRET_KEY_ID": "AWS_SECRET_KEY_ID_USER2"
   }
 }
+
