--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -40,15 +40,15 @@ jobs:
 
       # Step 1: Configure AWS credentials
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ env.AWS_SECRET_KEY_ID }}
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1
 
       # Step 2: Checkout the repository code
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      #- name: Checkout Repository
+      #  uses: actions/checkout@v4
 
       # Step 3: Ensure Terraform state S3 bucket exists
       - name: Create Terraform State Bucket
