--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Checkout secrets
+        uses: actions/checkout@v3
+        with:
+          secrets: USER_MAPPING_JSON
 
       - name: List root directory
         run: ls -la
