--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       #Step 0: Read user mapping
       - name: Checkout code
-        uses: actions/checkout@v
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
