--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -17,28 +17,30 @@ jobs:
       - name: Read User Mapping
         id: user-mapping
         run: |
-          USER_MAPPING=$(cat .github/workflows/user-mapping.json)
-          echo "::set-output name=user-mapping::$USER_MAPPING"
+          user_mapping=$(cat user-mapping.json)
+          github_actor=${{ github.actor }}
+          user_data=$(echo $user_mapping | jq -r ".[$github_actor]")
 
+          if [[ -z "$user_data" ]]; then
+              echo "No user mapping found for $github_actor"
+              exit 1
+          fi
+
+          access_key_id=$(echo $user_data | jq -r '.AWS_SECRET_ACCESS_KEY_ID')
+          secret_access_key=$(echo $user_data | jq -r '.AWS_SECRET_ACCESS_KEY')
+
+          echo "::set-output name=access_key_id::${access_key_id}"
+          echo "::set-output name=secret_access_key::${secret_access_key}"
+          
       - name: Print User Mapping
         run: echo "${{ steps.user-mapping.outputs.user-mapping }}"
-
-      - name: Set AWS Credentials
-        id: set-aws-credentials
-        run: |
-          USERNAME="${{ github.actor }}"
-          USER_MAPPING="${{ steps.user-mapping.outputs.user-mapping }}"
-          AWS_SECRET_ACCESS_KEY=$(echo $USER_MAPPING | jq -r --arg USERNAME "$USERNAME" '.[$USERNAME].AWS_SECRET_ACCESS_KEY')
-          AWS_SECRET_KEY_ID=$(echo $USER_MAPPING | jq -r --arg USERNAME "$USERNAME" '.[$USERNAME].AWS_SECRET_KEY_ID')
-          echo "AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}" >> $GITHUB_ENV
-          echo "AWS_SECRET_KEY_ID=${AWS_SECRET_KEY_ID}" >> $GITHUB_ENV
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ env.AWS_SECRET_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-access-key-id: ${{ steps.read_mapping.outputs.access_key_id }}
+          aws-secret-access-key: ${{ steps.read_mapping.outputs.secret_access_key }}
+          aws-region: us-central-1
 
       #- name: Checkout Repository
       #  uses: actions/checkout@v4
