--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -18,7 +18,7 @@ jobs:
         id: user-mapping
         run: |
           user_mapping=$(cat .github/workflows/user-mapping.json)
-          github_actor=${{ github.actor }}
+          github_actor="${{ github.actor }}"
           user_data=$(echo $user_mapping | jq -r ".[$github_actor]")
 
           if [[ -z "$user_data" ]]; then
