--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -18,9 +18,8 @@ jobs:
         id: user-mapping
         run: |
           user_mapping=$(cat .github/workflows/user-mapping.json)
-          github_actor="${{ github.actor }}"
-          user_data=$(echo $user_mapping | jq -r ".[$github_actor]")
-
+          github_actor=${{ github.actor }}
+           user_data=$(echo "$user_mapping" | jq -r ".$github_actor")
           if [[ -z "$user_data" ]]; then
               echo "No user mapping found for $github_actor"
               exit 1
