--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -23,7 +23,7 @@ jobs:
           echo "User mapping: $user_mapping"
           echo "GitHub actor: $github_actor"
 
-          user_data=$(echo "$user_mapping" | jq -r ".$github_actor")
+          user_data=$(echo "$user_mapping" | jq -r '[".$github_actor"]')
 
           if [[ -z "$user_data" ]]; then
               echo "No user mapping found for $github_actor"
