--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: weather-app
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: weather-app
@@ -15,8 +15,8 @@ spec:
         app: weather-app
     spec:
       containers:
-        - name: weather-app
-          image: sebbastiang/weather-app:latest  # Change to your correct image
-          ports:
-            - containerPort: 5000
-
+      - name: weather-app
+        image: weather-app:latest  # Use local image
+        ports:
+        - containerPort: 5000
+        imagePullPolicy: Never  # Prevents Kubernetes from trying to pull the image from an external registry
