--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,10 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          TF_VAR_weather_app_resource_group_name: ${{ secrets.RESOURCE_GROUP_NAME }}
+          TF_VAR_weather_app_resource_group_location: ${{ secrets.RESOURCE_GROUP_LOCATION }}
+          TF_VAR_vm_admin_username: ${{ secrets.VM_ADMIN_USERNAME }}
+          TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
@@ -36,3 +40,7 @@ jobs:
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          TF_VAR_weather_app_resource_group_name: ${{ secrets.RESOURCE_GROUP_NAME }}
+          TF_VAR_weather_app_resource_group_location: ${{ secrets.RESOURCE_GROUP_LOCATION }}
+          TF_VAR_vm_admin_username: ${{ secrets.VM_ADMIN_USERNAME }}
+          TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
