--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,27 +20,19 @@ jobs:
         working-directory: terraform/azure
 
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
         working-directory: terraform/azure
         env:
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          TF_VAR_weather_app_resource_group_name: ${{ secrets.RESOURCE_GROUP_NAME }}
-          TF_VAR_weather_app_resource_group_location: ${{ secrets.RESOURCE_GROUP_LOCATION }}
-          TF_VAR_vm_admin_username: ${{ secrets.VM_ADMIN_USERNAME }}
-          TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
         working-directory: terraform/azure
         env:
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-          TF_VAR_weather_app_resource_group_name: ${{ secrets.RESOURCE_GROUP_NAME }}
-          TF_VAR_weather_app_resource_group_location: ${{ secrets.RESOURCE_GROUP_LOCATION }}
-          TF_VAR_vm_admin_username: ${{ secrets.VM_ADMIN_USERNAME }}
-          TF_VAR_ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
