--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,31 +8,40 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout repo
+      uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: terraform/azure
+    - name: Terraform Init
+      run: terraform init
+      working-directory: terraform/azure
 
-      - name: Terraform Plan
-        run: terraform plan -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
-        working-directory: terraform/azure
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+    - name: Terraform Plan
+      run: |
+        terraform plan \
+          -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
+          -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
+          -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
+          -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
+          -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+          -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
+          -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
+          -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+      working-directory: terraform/azure
 
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
-        working-directory: terraform/azure
-        env:
-          ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+    - name: Terraform Apply
+      run: |
+        terraform apply -auto-approve \
+          -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
+          -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
+          -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
+          -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
+          -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+          -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
+          -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
+          -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+      working-directory: terraform/azure
