--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,8 @@ jobs:
             -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
             -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
             -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
-            -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
+            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+            -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
             -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
             -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
 
@@ -38,7 +38,7 @@ jobs:
             -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
             -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
             -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="weather_app_resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
-            -var="weather_app_resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
+            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+            -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
             -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
             -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
