--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,32 @@ on:
       - main
 
 jobs:
+  create-resource-group:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+
+      - name: Terraform Init
+        run: terraform -chdir=terraform/azure init
+
+      - name: Create Resource Group Only
+        run: |
+          terraform -chdir=terraform/azure apply -auto-approve \
+            -target=azurerm_resource_group.main \
+            -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
+            -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
+            -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
+            -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
+            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
+            -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}"
+
   deploy:
     runs-on: ubuntu-latest
-
+    needs: create-resource-group
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
