--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,24 +27,8 @@ jobs:
 
       - name: Terraform Plan
         run: |
-          terraform -chdir=terraform/azure plan \
-            -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
-            -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
-            -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
-            -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
-            -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
-            -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
-            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+          terraform -chdir=terraform/azure plan             -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}"             -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}"             -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}"             -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}"             -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}"             -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}"             -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}"             -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
 
       - name: Terraform Apply
         run: |
-          terraform -chdir=terraform/azure apply -auto-approve \
-            -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}" \
-            -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}" \
-            -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}" \
-            -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}" \
-            -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}" \
-            -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}" \
-            -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}" \
-            -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
+          terraform -chdir=terraform/azure apply -auto-approve             -var="azure_subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}"             -var="azure_client_id=${{ secrets.AZURE_CLIENT_ID }}"             -var="azure_client_secret=${{ secrets.AZURE_CLIENT_SECRET }}"             -var="azure_tenant_id=${{ secrets.AZURE_TENANT_ID }}"             -var="resource_group_name=${{ secrets.RESOURCE_GROUP_NAME }}"             -var="resource_group_location=${{ secrets.RESOURCE_GROUP_LOCATION }}"             -var="vm_admin_username=${{ secrets.VM_ADMIN_USERNAME }}"             -var="ssh_public_key=${{ secrets.SSH_PUBLIC_KEY }}"
